--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -115,4 +116,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 vendor/
+
+# for direnv
+.envrc
 
